@@ -5,6 +5,7 @@ ATTENTION: extDB3 domination-custom.ini file has changed. You need to copy the o
 - Added: In params "With AI recruitment" you can now select "Yes, but AI may not enter static weapons" (description.ext d_with_ai value 2)
 - Changed: CfgRemoteExec functions and commands mode is set to 1 (only whitelisted functions/commands are allowed for remote execution) in description.ext now; please note that might block scripting commands and functions used in addons/mods
 - Changed: Show the number of votes a main target got as number beside the marker
+- Changed: Bigger parajump dialog
 - Fixed: Number of player teamkills did not get added correctly to the SQL database
 - Fixed: If with AI recruitment is enabled you can now use additional addons which create AI on the player side without the mission deleting them
 - Optimized: Only broadcast the last global marker command over the network and not all
